regression_test_report_20250616_092924.txt
回归测试报告 - 2025-06-16 09:29:24
============================================================

Shell配置测试: PASS

Zsh连接测试: PASS

配置文件语法检查: FAIL
  错误: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 1279
    existing_config = {}
    ^
IndentationError: expected an indented block


MCP服务器语法检查: FAIL
  错误: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/python/mcp_server.py", line 21, in <module>
    from enhanced_config_manager import EnhancedConfigManager
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 1279
    existing_config = {}
    ^
IndentationError: expected an indented block


